[FEAT] implementação do mapa e estilizações para a main

--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
             <button id="notification"></button>
         </div>
     </header>
-    <main></main>
+    <main>
+        <div class="map-area">
+            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1xuWAcrGE2VM_6hgva5-GOVkzYUNTX0k&ehbc=2E312F" width="320" height="480"></iframe>
+        </div>
+        <section class="call-area">
+            <button>Abrir chamado</button>
+            <button>Abrir chamado urgente</button>
+        </section>
+    </main>
     <footer></footer>
     <link rel="stylesheet" href="script.js">
 </body>
