--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     </header>
     <main>
         <div class="map-area">
-            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1xuWAcrGE2VM_6hgva5-GOVkzYUNTX0k&ehbc=2E312F" width="320" height="480"></iframe>
+            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1xuWAcrGE2VM_6hgva5-GOVkzYUNTX0k&ehbc=2E312F" width="315" height="480"></iframe>
         </div>
         <section class="call-area">
-            <button>Abrir chamado</button>
-            <button>Abrir chamado urgente</button>
+            <button id="open">Abrir chamado</button>
+            <button id="emergency">Abrir chamado urgente</button>
         </section>
     </main>
     <footer></footer>
-    <link rel="stylesheet" href="script.js">
+    <script src="script.js" defer></script>
 </body>
 </html>
