[FEAT] implementação de img no button de notificação

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <header>
         <div class="header-container">
             <h1>SecuritySuape</h1>
-            <button id="notification"></button>
+            <button id="notification">
+                <img src="assets/packard-bell.png" alt="sino de notificação">
+            </button>
         </div>
     </header>
     <main>
