[FEAT] estilização e modelação da tela do form

--- a/app/form/form.html
+++ b/app/form/form.html
@@ -1,1 +1,9 @@
-<link rel="stylesheet" href="form.css">
+<aside>
+    <div class="form-area">
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome-client" name="nome">
+        <label for="chamado">Digite o problema:</label>
+        <input type="text" id="problem-report" name="chamado">
+        <button>Enviar</button>
+    </div>
+</aside>
