[STYLE] remodelação de código

--- a/app/form/form.html
+++ b/app/form/form.html
@@ -4,6 +4,14 @@
         <input type="text" id="nome-client" name="nome">
         <label for="chamado">Digite o problema:</label>
         <input type="text" id="problem-report" name="chamado">
+        <div class="checklist">
+            <label for="predial">Predial</label>
+            <input type="checkbox" id="type" name="predial">
+            <label for="pessoal">Pessoal</label>
+            <input type="checkbox" id="type" name="pessoal">
+            <label for="estrtura">Estrutural</label>
+            <input type="checkbox" id="type" name="Estrutural">
+        </div>
         <button>Enviar</button>
     </div>
 </aside>
