[STYLE] nova remodelação do código

--- a/app/form/form.html
+++ b/app/form/form.html
@@ -1,6 +1,7 @@
 <aside>
+    <button id="back" onclick="voltar()">Voltar</button>
     <div class="form-area">
-        <label for="nome">Nome:</label>
+        <label for="nome">Identificador</label>
         <input type="text" id="nome-client" name="nome">
         <label for="chamado">Digite o problema:</label>
         <input type="text" id="problem-report" name="chamado">
