--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
         </div>
         <section class="call-area">
             <button id="open" onclick="AbrirChamado()">Abrir chamado</button>
-            <button id="emergency" onclick="">Seus chamados</button>
+            <button id="emergency" onclick="YourCalls()">Seus chamados</button>
         </section>
     </main>
     <footer></footer>
