[STYLE] estilização e criação de uma div para receber os dados do formulário

--- a/app/index.html
+++ b/app/index.html
@@ -11,9 +11,9 @@
     <header>
         <div class="header-container">
             <h1>SecuritySuape</h1>
-            <button id="notification" onclick="notificação()">
+            <!-- <button id="notification" onclick="notificação()">
                 <img src="../assets/packard-bell.png" alt="sino de notificação">
-            </button>
+            </button> -->
         </div>
     </header>
     <main>
@@ -23,6 +23,8 @@
         <section class="call-area">
             <button id="open" onclick="AbrirChamado()">Abrir chamado</button>
             <button id="emergency" onclick="YourCalls()">Seus chamados</button>
+            <div id="chamados">
+            </div>
         </section>
     </main>
     <footer></footer>
