teste de funcionalidades

--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,9 @@
             <button id="emergency" onclick="YourCalls()">Seus chamados</button>
             <div id="chamados">
             </div>
+            <button id="askButton">Ask for location</button>
+            <div id="target"></div>
+            <!-- <div id="map"></div> -->
         </section>
     </main>
     <script src="script.js" defer></script>
