--- a/app/form/form.html
+++ b/app/form/form.html
@@ -12,6 +12,18 @@
             <input type="checkbox" id="type" name="tipo" value="pessoal">
             <label for="estrtura">Estrutural</label>
             <input type="checkbox" id="type" name="tipo" value="Estrutural">
+            <div class="columns">
+                <div class="column">
+                  <p><button type="button" onclick="getStream('video')">Grab video</button></p>
+                  
+                  <video controls autoplay style="height:180px; width: 240px;"></video>
+                </div>
+                <div class="column">
+                  <p><button type="button" onclick="getStream('audio')">Grab audio</button></p>
+                  
+                  <audio controls></audio>
+                </div>
+              </div>
         </div>
         <button type="button" onclick="sendForm()">Enviar</button>
     </form>
