[FEAT] remodelação do projeto

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,13 @@
             </button> -->
         </div>
     </header>
+    <form class="login-area">
+        <label for="log-id">Login</label>
+        <input type="text" id="log-id" name="identificador">
+        <label for="password">Senha</label>
+        <input type="password" id="password" name="password">
+        <button id="log-button" type="button" onclick="fazerLogin()">Login</button>
+    </form>
     <main>
         <h3>Olá</h3>
         <div class="map-area">
