[FEAT] remodelação do html

--- a/app/index.html
+++ b/app/index.html
@@ -25,20 +25,17 @@
     </form>
     <main>
         <h3>Olá</h3>
-        <div class="map-area">
-            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1xuWAcrGE2VM_6hgva5-GOVkzYUNTX0k&ehbc=2E312F" width="315" height="480"></iframe>
-        </div>
-        <section class="call-area">
+        <section class="map-area">
+            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1xuWAcrGE2VM_6hgva5-GOVkzYUNTX0k&ehbc=2E312F" width="305" height="480"></iframe>
             <button id="open" onclick="AbrirChamado()">Abrir chamado</button>
             <button id="emergency" onclick="YourCalls()">Seus chamados</button>
-            <div id="chamados">
+            <div id="chamados"></div>
             <!-- </div>
             <button id="askButton">Ask for location</button>
             <div id="target"></div> -->
             <!-- <div id="map"></div> -->
         </section>
     </main>
-    <script src="login/login.js" defer></script>
     <script src="script.js" defer></script>
 </body>
 </html>
