--- a/app/form/form.html
+++ b/app/form/form.html
@@ -12,6 +12,12 @@
             <input type="checkbox" id="type" name="tipo" value="Estrutural">
               </div>
         </div>
+        <div class="columns">
+            <div class="column">
+              <p><button type="button" onclick="getStream('video')">Acessar Câmera</button></p>
+              
+              <video controls autoplay style="height:180px; width: 240px;"></video>
+        </div>
         <button type="button" onclick="sendForm()">Enviar</button>
     </form>
 </aside>
