estilização de img menu

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <div class="header-container">
+            <img src="../assets/cardapio.png" alt="menu" id="menu">
             <h1>SecuritySuape</h1>
             <!-- <button id="notification" onclick="notificação()">
                 <img src="../assets/packard-bell.png" alt="sino de notificação">
